<resources>
    <string name="app_name">PatientCARD</string>
    <string name="progress_loading_text">Pobieranie danych...</string>
    <string name="login">LOGIN</string>
    <string name="hello">Witaj!</string>
    <string name="id_email">Identyfikator / E-mail</string>
    <string name="password">Hasło</string>
    <string name="scan_patient_qr_code">Zeskanuj QR kod pacjenta</string>
    <string name="pesel_placeholder">95011916435</string>
    <string name="fever_card">KARTA GORĄCZKOWA</string>
    <string name="add_examination">DODAJ BADANIE</string>
    <string name="examination">Badanie</string>
    <string name="recommendation_card">KARTA ZLECEŃ LEKARSKICH</string>
    <string name="add_recommendation">DODAJ ZLECENIE LEKARSKIE</string>
    <string name="observation_card">KARTA CIĄGŁEJ OBSERWACJI</string>
    <string name="add_observation">DODAJ OBSERWACJE</string>
    <string name="new_fever_card">Nowe badanie</string>
    <string name="more">WIĘCEJ</string>
    <string name="graph">WYKRES</string>
    <string name="add">DODAJ</string>
    <string name="date">data</string>
    <string name="pulse">tętno</string>
    <string name="temperature">ciepłota</string>
    <string name="recommendation">Zlecenie</string>
    <string name="recommendation_placeholder">Zlecenie 12.12.2017</string>
    <string name="observations_placeholder">Obserwacja 12.12.2017</string>
    <string name="new_recommendation_placeholder">Nowe zlecenie 12.12.2017</string>
    <string name="new_observations_placeholder">Nowa obserwacja 12.12.2017</string>
    <string name="drug">Lek:</string>
    <string name="drug_placeholder">Ketanol 100mg</string>
    <string name="morning">Rano</string>
    <string name="noon">Południe</string>
    <string name="evening">Wieczór</string>
    <string name="night">Noc</string>
    <string name="person">Osoba:</string>
    <string name="person_placeholder">Roman Karczoch</string>
    <string name="note">Notatka:</string>
    <string name="long_text_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim…</string>
    <string name="sth_wrong_check_internet_connection">Coś poszło nie tak. Sprawdź połączenie internetowe.</string>
    <string name="authorization_error">Problem autoryzacji. Zaloguj się ponownie.</string>
    <string name="enter_patient_qr_code">Wpisz QR Code pacjenta</string>
    <string name="open">OTWÓRZ</string>
    <string name="observation">Obserwacja</string>
    <string name="fill_data">Wypełnij pole</string>
    <string name="fill_data_with_dots">Wypełnij pole...</string>
    <string name="time_placeholder">--:--</string>
    <string name="set_hour">Wybierz godzine</string>
    <string name="set_date">Wybierz date</string>
    <string name="set">USTAW</string>
    <string name="cancel">ANULUJ</string>
    <string name="temperature_have_to_be_below">Wartość temperatury musi być poniżej 50°C</string>
    <string name="temperature_have_to_be_more">Wartość temperatury musi być powyżej 30°C</string>
    <string name="pulse_have_to_be_below">Wartość tętna musi być poniżej 165</string>
    <string name="pulse_have_to_be_more">Wartość tętna musi być powyżej 55</string>
    <string name="are_you_sure_you_want_to_delete">Jesteś pewien, że chcesz usunąć</string>
    <string name="from_day">z dnia</string>
    <string name="delete">USUŃ</string>
    <string name="edit_observation">EDYTUJ OBSERWACJE</string>
    <string name="edit_recommendation">EDYTUJ REKOMENDACJE</string>
    <string name="list_of_observations_is_empty">Lista obserwacji jest pusta!</string>
    <string name="list_of_recommendations_is_empty">Lista zleceń jest pusta!</string>
    <string name="list_of_fever_card_is_empty">Karta gorączkowa jest pusta!</string>
    <string name="scan_qr_code">Skanuj kod QR</string>
    <string name="back">COFNIJ</string>
    <string name="logout">WYLOGUJ</string>
    <string name="are_you_sure_that_you_want_to_logout">Jesteś pewien, że chcesz się WYLOGOWAĆ?</string>
    <string name="wrong_login_or_password">Niepoprawny LOGIN lub HASŁO</string>
</resources>
