<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.patientcard.customviews.TitilliumLightTextView
        android:id="@+id/item_date_text_view"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/date"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:gravity="center_horizontal"/>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"/>

    <com.patientcard.customviews.TitilliumLightTextView
        android:id="@+id/item_pulse_text_view"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/pulse"
        android:textColor="@color/colorPulse"
        android:textSize="16sp"
        android:gravity="center_horizontal"/>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"/>

    <com.patientcard.customviews.TitilliumLightTextView
        android:id="@+id/item_temperature_text_view"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/temperature"
        android:textColor="@color/colorTemperature"
        android:textSize="16sp"
        android:gravity="center_horizontal"/>

</LinearLayout>