<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingTop="8dp">

    <com.patientcard.customviews.TitilliumSemiBoldTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/recommendation_placeholder"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_frame_white_with_grey_border"
        android:orientation="vertical">

        <com.patientcard.customviews.TitilliumLightTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:text="@string/drug"
            android:textColor="@color/colorPrimaryGrey"
            android:textSize="16sp" />

        <com.patientcard.customviews.TitilliumLightTextView
            android:id="@+id/drugValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/drug_placeholder"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="-16dp"
            android:background="@color/colorPrimaryGrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingTop="8dp">

                <com.patientcard.customviews.TitilliumLightTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/morning"
                    android:textColor="@color/colorPrimaryGrey"
                    android:textSize="16sp" />

                <com.patientcard.customviews.TitilliumLightTextView
                    android:id="@+id/morningTimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_placeholder"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryGrey" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingTop="8dp">

                <com.patientcard.customviews.TitilliumLightTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noon"
                    android:textColor="@color/colorPrimaryGrey"
                    android:textSize="16sp" />

                <com.patientcard.customviews.TitilliumLightTextView
                    android:id="@+id/noonTimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_placeholder"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryGrey" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingTop="8dp">

                <com.patientcard.customviews.TitilliumLightTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/evening"
                    android:textColor="@color/colorPrimaryGrey"
                    android:textSize="16sp" />

                <com.patientcard.customviews.TitilliumLightTextView
                    android:id="@+id/eveningTimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_placeholder"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryGrey" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingTop="8dp">

                <com.patientcard.customviews.TitilliumLightTextView
                    android:id="@+id/nightTimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/night"
                    android:textColor="@color/colorPrimaryGrey"
                    android:textSize="16sp" />

                <com.patientcard.customviews.TitilliumLightTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_placeholder"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>