<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.patientcard.qrreader.QRReaderActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="110dp">

        <View
            android:id="@+id/top_accent_view"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/colorAccent" />

        <ImageView
            android:id="@+id/patient_avatar_image_view"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:src="@drawable/rounded_fever_icon" />

        <com.patientcard.customviews.TitilliumLightTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/top_accent_view"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/patient_avatar_image_view"
            android:text="@string/name_placeholder"
            android:textColor="@android:color/white"
            android:textSize="19sp" />

        <com.patientcard.customviews.TitilliumLightTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/top_accent_view"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/patient_avatar_image_view"
            android:text="@string/fever_card"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="6"
            android:background="@drawable/rounded_frame_white_with_grey_border">

            <LinearLayout
                android:id="@+id/fever_card_table_frame_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:orientation="horizontal"
                android:background="@drawable/rounded_frame_accent_with_grey_border">

                <com.patientcard.customviews.TitilliumLightTextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/date"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:gravity="center_horizontal"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"/>

                <com.patientcard.customviews.TitilliumLightTextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/pulse"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:gravity="center_horizontal"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"/>

                <com.patientcard.customviews.TitilliumLightTextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/temperature"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:gravity="center_horizontal"/>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/short_fever_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/fever_card_table_frame_layout"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/more_frame_layout"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_frame_accent_with_grey_border">

                <com.patientcard.customviews.TitilliumLightTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/more"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/add_frame_layout"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:background="@drawable/rounded_frame_accent_with_grey_border">

                <com.patientcard.customviews.TitilliumLightTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/add"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>
