<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/deleteDialogLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.9"
        android:background="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="26dp">

        <com.patientcard.views.customviews.TitilliumLightTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/are_you_sure_you_want_to_delete"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <com.patientcard.views.customviews.TitilliumSemiBoldTextView
            android:id="@+id/whatToDeleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <com.patientcard.views.customviews.TitilliumLightTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/from_day"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <com.patientcard.views.customviews.TitilliumSemiBoldTextView
            android:id="@+id/whenToDeleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_frame_accent_with_grey_border"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <com.patientcard.views.customviews.TitilliumLightTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/deleteButton"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_frame_delete_with_grey_border"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <com.patientcard.views.customviews.TitilliumLightTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/delete"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>