<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/medical_history" />

    <com.patientcard.views.customviews.TitilliumLightTextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/hello"
        android:textColor="@android:color/black"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_below="@id/welcomeTextView"
        android:layout_above="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <com.patientcard.views.customviews.TitilliumLightTextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/id_email"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <ImageView
                android:id="@+id/emailImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="3dp"
                android:src="@drawable/login" />

            <com.patientcard.views.customviews.TitilliumLightEditText
                android:id="@+id/loginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="14sp" />

        </RelativeLayout>

        <com.patientcard.views.customviews.TitilliumLightTextView
            android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <ImageView
                android:id="@+id/passwordImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:src="@drawable/password" />

            <com.patientcard.views.customviews.TitilliumLightEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textSize="14sp" />

        </RelativeLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/rounded_frame_accent_with_grey_border"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <com.patientcard.views.customviews.TitilliumLightTextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </FrameLayout>

</RelativeLayout>
